Finally fixed banner taking up 100% width and no horizontal scroll Also menu button now doesn't budge even half button width with scroll

--- a/portfolio/static/portfolio/styles/section.css
+++ b/portfolio/static/portfolio/styles/section.css
@@ -9,7 +9,6 @@
 
 #home-section .banner {
     height: 30vh;
-    width: 100%;
     background-image: url('/static/portfolio/assets/banner.jpg');
     background-repeat: no-repeat;
     background-position: center center;
